# simple-sdl-gui-manager

./: CMakeLists.txt  LICENSE  button.cpp  button.h  main.cpp  onscreenmanager.cpp  onscreenmanager.h  onscreenobject.h
